syntax = "proto3";

package berty.entity;

option go_package = "berty.tech/core/entity";

import "pkg/validate/validate.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "api/protobuf/graphql/graphql.proto";
import "entity/device.proto";

message Contact {
  // option (validate.additional_handler) = "m.customValidate()";

  enum Status {
    Unknown = 0;
    IsFriend = 1;
    IsTrustedFriend = 2;
    IsRequested = 3;
    RequestedMe = 4;
    IsBlocked = 5;
    Myself = 42;
  }

  //
  // gorm fields
  //

  string id = 1 [(gql.graphql_id) = true, (gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID", (validate.is_contact_key) = true];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (validate.skip) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (validate.skip) = true];

  //
  // internal fields
  //

  bytes sigchain = 10;
  Status status = 11;
  repeated Device devices = 12 [(validate.min_items) = 1]; // HasMany to Device.Contact
  string display_name = 13;
  string display_status = 14;
  string override_display_name = 15;
  string override_display_status = 16;
}
